[package]
name = "circ"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Efficient referenced counted pointers for non-blocking concurrency"
readme = "README.md"
homepage = "https://github.com/kaist-cp/circ"
repository = "https://github.com/kaist-cp/circ"
keywords = ["atomic", "reference-counting", "non-blocking", "lock-free"]
categories = ["concurrency", "memory-management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-utils = { path = "../crossbeam/crossbeam-utils" }
scopeguard = "1.1.0"
static_assertions = "1.1.0"
# disable default features for atomic, it's use static spinlock array to emulate atomic operations, vendor it if needed (eg. mipsel-sony-psx)
atomic = {version = "0.5", default-features = false}
cfg-if = "1.0"
# rustc-hash = "1.1.0"
memoffset = "0.7"
dyntls = { path = "../../../app/dyntls" }
tracing = { path = "../tracing/tracing" }

[dev-dependencies]
rand = "0.8"
bitflags = "2.4.0"
dyntls-host = { path = "../../../app/dyntls_host"}
